melhorando visibilidade healthcheck

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.username=root
 spring.datasource.password=zupper010321
 spring.jpa.show-sql=true
 spring.jpa.format_sql=true
+
+
+#actuator
+management.endpoints.web.exposure.include=info,health,configprops,metrics,prometheus
+management.endpoint.health.show-details=always
