--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,22 @@
+#application configuration
+server.port=${SERVER_PORT:8080}
+
+#database configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url=jdbc:mysql://localhost/db_proposal?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=zupper010321
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost/db_proposal?createDatabaseIfNotExist=true&serverTimezone=UTC}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:zupper010321}
 spring.jpa.show-sql=true
 spring.jpa.format_sql=true
 
+#feign timeout configuration
+#feign.client.config.default.connectTimeout=60000
+#feign.client.config.default.readTimeout=10000
 
-#actuator
+financial.url=${FINANCIAL_URL:http://localhost:9999/api}
+accounts.url=${ACCOUNTS_URL:http://localhost:8888/api/cartoes}
+
+#actuator configuration
 management.endpoints.web.exposure.include=info,health,configprops,metrics,prometheus
 management.endpoint.health.show-details=always
