--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,21 @@ accounts.url=${ACCOUNTS_URL:http://localhost:8888/api/cartoes}
 #actuator configuration
 management.endpoints.web.exposure.include=info,health,configprops,metrics,prometheus
 management.endpoint.health.show-details=always
+
+#keycloak configuration
+keycloak.auth-server-url=${AUTH_SERVER_URL:http://localhost:18080/auth}
+keycloak.realm=bank-microservice
+keycloak.resource=proposals-service
+keycloak.credentials.secret=3222c13c-730f-47f0-8b9a-9361b950def6
+keycloak.use-resource-role-mappings=true
+keycloak.principal-attribute=email
+#routes
+keycloak.security-constraints[0].authRoles[0]=user
+keycloak.security-constraints[0].authRoles[1]=admin
+keycloak.security-constraints[0].securityCollections[0].patterns[0]=/*
+
+keycloak.security-constraints[1].authRoles[0]=admin
+keycloak.security-constraints[1].securityCollections[0].patterns[0]=/actuator/*
+
+
+
