--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,5 +36,7 @@ keycloak.security-constraints[0].securityCollections[0].patterns[0]=/*
 keycloak.security-constraints[1].authRoles[0]=admin
 keycloak.security-constraints[1].securityCollections[0].patterns[0]=/actuator/*
 
-
+#prometheus configuration
+management.metrics.tags.application=${APPLICATION_NAME:proposals service}
+management.metrics.tags.environment=${ENVIRONMENT:development}
 
