--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,16 @@ keycloak.security-constraints[0].securityCollections[0].patterns[0]=/*
 keycloak.security-constraints[1].authRoles[0]=admin
 keycloak.security-constraints[1].securityCollections[0].patterns[0]=/actuator/*
 
+#logging.level.org.keycloak=DEBUG
+
 #prometheus configuration
 management.metrics.tags.application=${APPLICATION_NAME:proposals service}
 management.metrics.tags.environment=${ENVIRONMENT:development}
 
+#sleuth/zipkin/jaeger configuration
+spring.zipkin.service.name=proposals
+spring.zipkin.base-url=http://localhost:9411
+spring.zipkin.api-path=api/v2/spans
+spring.sleuth.sampler.probability=1.0
+spring.sleuth.propagation.type=CUSTOM
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
