--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -111,6 +111,7 @@ services:
   prometheus:
     image: prom/prometheus
     volumes:
+     - ./prometheus.yml:/etc/prometheus/prometheus.yml
      - prometheus-volume:/etc/prometheus/
     network_mode: bridge
     ports:
@@ -154,6 +155,7 @@ services:
       FINANCIAL_URL: http://analise:9999/api
       ACCOUNTS_URL: http://contas:8888/api/cartoes
       AUTH_SERVER_URL: http://keycloak:8080/auth
+      JAEGER_COLLECTOR_URL: http://jaeger:9411
       APPLICATION_NAME: proposals service
       ENVIRONMENT: docker development
 
