--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,8 @@ keycloak.security-constraints[0].securityCollections[0].patterns[0]=/*
 keycloak.security-constraints[1].authRoles[0]=admin
 keycloak.security-constraints[1].securityCollections[0].patterns[0]=/actuator/*
 
+keycloak.security-constraints[2].securityCollections[0].patterns[0]=/actuator/prometheus
+
 #logging.level.org.keycloak=DEBUG
 
 #prometheus configuration
@@ -44,7 +46,7 @@ management.metrics.tags.environment=${ENVIRONMENT:development}
 
 #sleuth/zipkin/jaeger configuration
 spring.zipkin.service.name=proposals
-spring.zipkin.base-url=http://localhost:9411
+spring.zipkin.base-url=${JAEGER_COLLECTOR_URL:http://localhost:9411}
 spring.zipkin.api-path=api/v2/spans
 spring.sleuth.sampler.probability=1.0
 spring.sleuth.propagation.type=CUSTOM
