--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,6 @@ spring.zipkin.api-path=api/v2/spans
 spring.sleuth.sampler.probability=1.0
 spring.sleuth.propagation.type=CUSTOM
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+
+#encryption
+encryption.key=${ENCRYPTION_KEY:77217A25432A46294A404E635266556A}
